为swagger添加接口测试
